# stock-prediction-portal

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
backend-django/accounts/: serializers.py  views.py
backend-django/api/: urls.py  views.py
backend-django/stock_prediction_main/: settings.py  urls.py
frontend-react/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend-react/src/: App.jsx  AuthProvider.jsx  PrivateRoute.jsx  PublicRoute.jsx  axiosInstance.jsx
frontend-react/src/assets/css/: style.css
frontend-react/src/components/: Footer.jsx  Header.jsx  Login.jsx  Main.jsx  Register.jsx
frontend-react/src/components/dashboard/: Dashboard.jsx
ml/: Untitled.ipynb
ml/notebooks/: stock_prediction_model.keras  stock_prediction_using_LSTM.ipynb
