[project]
name = "stock-prediction-project"
version = "0.1.0"
description = "Stock market prediction app powered by Deep Learning and Django REST API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
	{name = "ChechiDev", email = "chechidatadev@gmail.com"}
]
dependencies = [
    "django>=5.2.7",
    "django-cors-headers==4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "keras>=3.15.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-decouple>=3.8",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
    "matplotlib>=3.11.0",
]
lint = [
    "ruff>=0.15.18",
]
prod = [
    "gunicorn>=26.0.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
